Add update checker; fix string check for backwards compatibility